# tetrika_tt

./: Makefile  README.md  pyproject.toml  requirements.txt
task1/: solution.py
task2/: solution.py
task3/: solution.py
tests/task1/: test_task1_solution.py
tests/task2/: test_task2_solution.py
tests/task3/: test_task3_solution.py
